--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -2,6 +2,24 @@
   position: relative;
 }
 
+.blur-f-1 {
+  bottom: 0;
+  right: 15%;
+  width: 26rem;
+  height: 12rem;
+  filter: blur(200px);
+  background: red;
+}
+
+.blur-f-2 {
+  bottom: 0;
+  left: 15%;
+  width: 26rem;
+  height: 12rem;
+  filter: blur(200px);
+  background: rgb(255, 115, 0);
+}
+
 .Footer-container > hr {
   border: 1px solid var(--lightgray);
 }
