--- a/src/components/Programs/Programs.css
+++ b/src/components/Programs/Programs.css
@@ -61,3 +61,21 @@
 .join-now > img {
   width: 1rem;
 }
+@media screen and (max-width: 768px) {
+  .Programs {
+    padding: 0 4rem;
+  }
+  .programs-header {
+    gap: 1rem;
+    font-size: x-large;
+    align-items: center;
+    justify-content: center;
+    margin-top: 2rem;
+  }
+  .program-categories {
+    flex-direction: column;
+  }
+  .category {
+    height: 10rem;
+  }
+}
