--- a/src/components/Join/Join.css
+++ b/src/components/Join/Join.css
@@ -54,3 +54,23 @@
   background-color: var(--orange);
   color: white;
 }
+@media screen and (max-width: 768px) {
+  .Join {
+    flex-direction: column;
+    gap: 1rem;
+  }
+  .left-j {
+    font-size: x-large;
+    flex-direction: column;
+  }
+  .right-j {
+    padding: 2rem;
+  }
+  .left-j > hr {
+    width: 7.5rem;
+  }
+  .btn-j {
+    position: relative;
+    left: 1rem;
+  }
+}
