--- a/src/components/Reasons/Reasons.css
+++ b/src/components/Reasons/Reasons.css
@@ -89,3 +89,35 @@
 .partners > img {
   width: 2.5rem;
 }
+@media screen and (max-width: 768px) {
+  .Reasons {
+    flex-direction: column;
+    padding: 0 4rem;
+  }
+  .left-r {
+    /* grid-auto-rows: auto; */
+    overflow: hidden;
+  }
+  .left-r > :nth-child(1) {
+    grid-row: 1/3;
+  }
+  .left-r > :nth-child(2) {
+    grid-column: 2/4;
+    grid-row: 1;
+    width: 27rem;
+  }
+  .left-r > :nth-child(3) {
+    height: 11rem;
+  }
+  .left-r > :nth-child(4) {
+    width: 12rem;
+    height: 11rem;
+  }
+  .details-r > div {
+    gap: 2rem;
+    align-items: center;
+  }
+  .partners {
+    gap: 3rem;
+  }
+}
